@@ -1237,6 +1237,10 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; chinstdir     =
 ; uninstall     =
 ; uninstparam   =
+; preinstall    =
+; postinstall   =
+; preuninstall  =
+; postuninstall =
 
 ; [Name of application]
 ; category      - Category of applications that this application belongs to
@@ -1253,6 +1257,10 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; chinstdir     - Flags to specify the install directory
 ; uninstall     - Name of the folder in registry containing uninstall information
 ; uninstparam   - Flags to append for uninstall
+; preinstall    - Comma separated list of commands to execute prior to install
+; postinstall   - Comma separated list of commands to execute after successful install
+; preuninstall  - Comma separated list of commands to execute prior to uninstall
+; postuninstall - Comma separated list of commands to execute after successful uninstall
 
 ; Tips for specific installers
 ;
